Material table with CRUD data feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,2 @@
 <h1>FAYRIX APP</h1>
-<button (click)="addRecord()">Add Record</button>
-<button (click)="deleteRecord()">Delete record</button>
-<button (click)="updateRecord()">Update record</button>
+<app-event-table></app-event-table>
