--- a/src/app/event-table/event-table.component.html
+++ b/src/app/event-table/event-table.component.html
@@ -1,1 +1,71 @@
-<p>event-table works!</p>
+<button
+  mat-flat-button
+  color="primary"
+  class="button-wrapper"
+  (click)="addRecord()"
+>Add Item</button>
+
+<div class="table-container mat-elevation-z4">
+  <table mat-table [dataSource]="dataSource" *ngIf="!isLoading; else loading">
+    <ng-container *ngFor="let column of columnData; trackBy: trackEventFn">
+      <ng-container matColumnDef="{{column.id}}">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          class="header-cell"
+        >{{ column.id === 'removeItem' ? null : column.id }}</th>
+        <td
+          mat-cell
+          *matCellDef="let row"
+          class="column-cell"
+          [class.type-cell]="column.id === 'type'"
+        >
+          <div class="event-id-cell" *ngIf="column.id === 'eventId'; else normalCell">
+            <button
+              class="trash-icon"
+              mat-icon-button
+              (click)="deleteRecord(row.eventId)"
+            >
+              <mat-icon>delete_outline</mat-icon>
+            </button>
+            <span>{{ row[column.id] }}</span>
+          </div>
+
+          <ng-template #normalCell>
+            <ng-container *ngIf="column.editable; else staticData">
+              <app-dropdown
+                *ngIf="column.type === inputType.select"
+                [row]="row"
+                [column]="column"
+                (save)="updateRecord($event, row)"
+              ></app-dropdown>
+
+              <app-normal-input
+                *ngIf="column.type === inputType.text"
+                [row]="row"
+                [column]="column"
+                (save)="updateRecord($event, row)"
+              ></app-normal-input>
+            </ng-container>
+          </ng-template>
+
+          <ng-template #staticData>
+            {{ row[column.id] }}
+          </ng-template>
+        </td>
+      </ng-container>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let data; columns: displayedColumns;" class="table-row"></tr>
+  </table>
+</div>
+
+<mat-paginator [pageSizeOptions]="[10, 20]" showFirstLastButtons></mat-paginator>
+
+<ng-template #loading>
+  <div class="loading-spinner-container">
+    <mat-spinner diameter="40"></mat-spinner>
+  </div>
+</ng-template>
+
